[tool.poetry]
name = "cardiff-surf"
version = "0.0.1"
description = "Cardiff surf twitter bot"
authors = ["Michael Brewer"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
# Used for submitting a tweet
tweepy = "^4.12.1"
# Used to fetch data from some api
requests = "^2.28.2"
# Used for logging, tracing and metrics
aws-lambda-powertools = {version = "^2.9.0", extras=["tracer"]}

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.11.4"
flake8 = "^5.0.4"
flake8-black = "^0.3.6"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.10.0"
flake8-debugger = "^4.1.2"
flake8-fixme = "^1.1.1"
flake8-isort = "^5.0.3"
flake8-variables-names = "^0.0.5"
flake8-eradicate = "^1.4.0"
flake8-bugbear = "^22.12.6"
mypy = "^1.0"
bandit = "^1.7.4"
radon = "^5.1.0"
xenon = "^0.9.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
moto = "^4.1.2"
types-requests = "^2.28.11.7"
types-python-dateutil = "^2.8.19.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
skip = "lambda_proxy"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | example
)
'''
